@@ -4,6 +4,7 @@
 
 * Changes in version 16 (2006-XX-XX):
 
+- ROM list now supports multiple ROM directories (IN PROGRESS).
 - New integrated ROM driver editor (IN PROGRESS).
 - Added possibility to select the new Universal BIOS.
 - Better guessing of the default path to Gngeo's `romrc' file.
